src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-ofT-dwP0.25-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    open-floating true\n    default-column-width { proportion 0.25; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 0 × 0, bounds: 1280 × 720, states: []
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
